--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,15 @@
 version: 2.1
 orbs:
   node: circleci/node@4.1.0
-  aws-cli: circleci/aws-cli@1.3.1
+  aws-cli: circleci/aws-cli@2.1.0
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   aws-cli-cred-setup:
     executor: aws-cli/default
+    description: AWS Env Setup
     steps:
+      - checkout
       - aws-cli/setup:
           aws-access-key-id: AWS_ACCESS_KEY
           aws-secret-access-key: AWS_SECRET
