--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ version: 2.1
 orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@2.1.0
+  aws-elastic-beanstalk: circleci/aws-elastic-beanstalk@2.0.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -34,6 +35,11 @@ jobs:
           name: "Udagram-api build"
           command: |
             npm run backend:build
+      - eb/setup
+      - run:
+          name: "Udagram-api Deploying to Elastic beanstalk"
+          command: |
+            npm run backend:deploy
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
