feat: added deploy cmd

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"scripts": {
 		"backend:install": "cd udagram-api && npm install",
 		"backend:test": "cd udagram-api && npm run test",
-		"backend:build": "cd udagram-api && npm run build"
+		"backend:build": "cd udagram-api && npm run build",
+		"backend:deploy": "cd udagram-api && npm run deploy"
 	},
 	"devDependencies": {}
 }
