fix: Update orb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
       - node/install
       - checkout
-      - eb/setup
+      - aws-elastic-beanstalk/setup
       - run:
           name: "Udagram-api Install"
           command: |
