--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ orbs:
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@2.1.0
   aws-elastic-beanstalk: circleci/aws-elastic-beanstalk@2.0.1
+  browser-tools: circleci/browser-tools@1.2.2
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -25,7 +26,7 @@ jobs:
       - checkout
       - aws-elastic-beanstalk/setup
       - run:
-          name: "Udagram-api Install"
+          name: "Udagram-api Install project dependecies"
           command: |
             npm run backend:install
       - run:
@@ -41,17 +42,18 @@ jobs:
       - image: cimg/base:stable
     steps:
       - node/install
+      - browser-tools/install-chrome
       - checkout
       - aws-cli/setup:
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           aws-region: AWS_DEFAULT_REGION
       - run:
-          name: "Udagram-frontend Install"
+          name: "Udagram-frontend install project dependecies"
           command: |
             npm run frontend:install
       - run:
-          name: "Udagram-frontend test"
+          name: "Udagram-frontend run tests"
           command: |
             npm run frontend:test
       - run:
@@ -64,6 +66,10 @@ jobs:
             npm run frontend:deploy
 workflows:
   deploy-full-project-workflow:
+    - build:
+      filters:
+        branches:
+          only: master
     jobs:
       - aws-cli-cred-setup
       - deploy-api
