--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,15 +9,6 @@ orbs:
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  aws-cli-cred-setup:
-    executor: aws-cli/default
-    description: AWS Env Setup
-    steps:
-      - checkout
-      - aws-cli/setup:
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          aws-region: AWS_DEFAULT_REGION
   deploy-api:
     docker:
       - image: cimg/base:stable
@@ -67,10 +58,11 @@ jobs:
 workflows:
   deploy-full-project-workflow:
     jobs:
-      - aws-cli-cred-setup
       - deploy-api
+        filters:
+          branches:
+            only: master
       - deploy-frontend
-      - build:
         filters:
           branches:
             only: master
