--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 orbs:
-  node: circleci/node@4.1.0
+  node: circleci/node@5.0.0
   aws-cli: circleci/aws-cli@2.1.0
   aws-elastic-beanstalk: circleci/aws-elastic-beanstalk@2.0.1
   browser-tools: circleci/browser-tools@1.2.2
@@ -13,7 +13,8 @@ jobs:
     docker:
       - image: cimg/base:stable
     steps:
-      - node/install
+      - node/install:
+        node-version: '16.13'
       - checkout
       - aws-elastic-beanstalk/setup
       - run:
