--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,12 @@ jobs:
       - node/install:
         node-version: '16.13'
       - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
+      - run:
+          command: |
+            google-chrome --version
+            chromedriver --version
+          name: Check install
       - checkout
       - aws-cli/setup:
           aws-access-key-id: AWS_ACCESS_KEY_ID
