--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,8 @@ orbs:
 jobs:
   deploy-api:
     docker:
-      - image: cimg/base:stable
+      #- image: cimg/base:stable
+      - image: cimg/node:16.8.0-browsers
     steps:
       - node/install:
         node-version: '16.13'
@@ -66,6 +67,10 @@ jobs:
 workflows:
   deploy-full-project-workflow:
     jobs:
+      #- deploy-api:
+      #  filters:
+      #    branches:
+      #     only: master
       - deploy-frontend:
         filters:
           branches:
