--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,10 @@ jobs:
     steps:
       - node/install:
         node-version: '16.13'
-      - browser-tools/install-chrome
-      - browser-tools/install-chromedriver
+      - browser-tools/install-browser-tools:
+          chrome-version: 85.0.4183.102  
+      #- browser-tools/install-chrome
+      #- browser-tools/install-chromedriver
       - run:
           command: |
             google-chrome --version
