--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,15 +32,13 @@ jobs:
             npm run backend:deploy
   deploy-frontend:
     docker:
-      #- image: cimg/base:stable
-      - image: cimg/node:16.8.0-browsers
+      - image: cimg/base:stable
+      #- image: cimg/node:16.8.0-browsers
     steps:
       - node/install:
         node-version: '16.13'
       - browser-tools/install-browser-tools:
           chrome-version: 85.0.4183.102  
-      #- browser-tools/install-chrome
-      #- browser-tools/install-chromedriver
       - run:
           command: |
             google-chrome --version
